[gd_scene load_steps=10 format=3 uid="uid://cjnxd5nucttbs"]

[ext_resource type="Script" path="res://Scripts/eagle.gd" id="1_tj6wa"]
[ext_resource type="Texture2D" uid="uid://bi3okauupqdvy" path="res://Images/eagle.png" id="2_tjm08"]
[ext_resource type="AudioStream" uid="uid://g75xeu0uqkvi" path="res://Sounds/Enemy SFX/Beak Bandit Eagle Caw A.wav" id="3_42lq1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uuxkw"]
atlas = ExtResource("2_tjm08")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4m6l"]
atlas = ExtResource("2_tjm08")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hwf4"]
atlas = ExtResource("2_tjm08")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4p5kw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuxkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4m6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hwf4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0lao"]
size = Vector2(58, 47)

[sub_resource type="CircleShape2D" id="CircleShape2D_qpsdw"]
radius = 728.044

[node name="eagle" type="Area2D"]
script = ExtResource("1_tj6wa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4p5kw")
autoplay = "default"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -1.5)
shape = SubResource("RectangleShape2D_r0lao")

[node name="range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="range"]
shape = SubResource("CircleShape2D_qpsdw")

[node name="sound_caw" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_42lq1")
volume_db = -10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
